@@ -1,5 +1,5 @@
 <?php
-// $Id: panels-twocol-bricks.tpl.php,v 1.1.2.1 2008/12/16 21:27:59 merlinofchaos Exp $
+// $Id: panels-twocol-bricks.tpl.php,v 1.1.2.2 2010/07/20 19:06:04 merlinofchaos Exp $
 /**
  * @file
  * Template for a 2 column panel layout.
@@ -24,31 +24,45 @@
  */
 ?>
 <div class="panel-display panel-2col-bricks clear-block" <?php if (!empty($css_id)) { print "id=\"$css_id\""; } ?>>
-  <div class="panel-panel panel-col-top">
-    <div class="inside"><?php print $content['top']; ?></div>
-  </div>
-  <div class="center-wrapper">
-    <div class="panel-panel panel-col-first">
-      <div class="inside"><?php print $content['left_above']; ?></div>
-    </div>
+  <?php if ($content['top']): ?>
+    <div class="panel-panel panel-col-top">
+      <div class="inside"><?php print $content['top']; ?></div>
+    </div>    
+  <?php endif ?>
 
-    <div class="panel-panel panel-col-last">
-      <div class="inside"><?php print $content['right_above']; ?></div>
-    </div>
-  </div>
-  <div class="panel-panel panel-col-middle">
-    <div class="inside"><?php print $content['middle']; ?></div>
-  </div>
-  <div class="center-wrapper">
-    <div class="panel-panel panel-col-first">
-      <div class="inside"><?php print $content['left_below']; ?></div>
-    </div>
+  <?php if ($content['left_above'] || $content['right_above']): ?>
+    <div class="center-wrapper">
+      <div class="panel-panel panel-col-first">
+        <div class="inside"><?php print $content['left_above']; ?></div>
+      </div>
 
-    <div class="panel-panel panel-col-last">
-      <div class="inside"><?php print $content['right_below']; ?></div>
-    </div>
-  </div>
-  <div class="panel-panel panel-col-bottom">
-    <div class="inside"><?php print $content['bottom']; ?></div>
-  </div>
+      <div class="panel-panel panel-col-last">
+        <div class="inside"><?php print $content['right_above']; ?></div>
+      </div>
+    </div>    
+  <?php endif ?>
+
+  <?php if ($content['middle']): ?>
+    <div class="panel-panel panel-col-middle">
+      <div class="inside"><?php print $content['middle']; ?></div>
+    </div>    
+  <?php endif ?>
+
+  <?php if ($content['left_below'] || $content['right_below']): ?>
+    <div class="center-wrapper">
+      <div class="panel-panel panel-col-first">
+        <div class="inside"><?php print $content['left_below']; ?></div>
+      </div>
+
+      <div class="panel-panel panel-col-last">
+        <div class="inside"><?php print $content['right_below']; ?></div>
+      </div>
+    </div>    
+  <?php endif ?>
+
+  <?php if ($content['bottom']): ?>
+    <div class="panel-panel panel-col-bottom">
+      <div class="inside"><?php print $content['bottom']; ?></div>
+    </div>    
+  <?php endif ?>
 </div>
