@@ -26,6 +26,7 @@ Moved Panels stylizer to CTools. You must update CTools at the same time as Pane
 #690902: Improvement to export.module integration of panel nodes.
 #690814 by neclimdul: Panels mini edit form could overwrite page title.
 #675220 by dereine: Provide a watchdog message if a layout can't be loaded when rendering a panel.
+#713526 by psynaptic: Omit top and bottom region divs in stacked layouts if regions are empty.
 
 Panels 6.x-3.5 (2010-May-28)
 ==============
